new: add Card module, form submit, delete button

--- a/index.html
+++ b/index.html
@@ -18,29 +18,19 @@
   <main>
     <section>
       <form class="form">
-        <input class="form__input" type="text" placeholder="What to do?"></input>
+        <input class="form__input" type="text" placeholder="What to do?" maxlength="250"></input>
         <button class="form__button" type="submit">Add</button>
       </form>
     </section>
     <section>
       <ul class="list">
-        <li class="list__element">
-          <p class="list__element-text">Сделать дела после того как </p>
-          <button class="list__element-btn" type="button"></button>
-        </li>
-        <li class="list__element">
-          <p class="list__element-text">asdasdas</p>
-          <button class="list__element-btn" type="button"></button>
-        </li>
-        <li class="list__element">
-          <p class="list__element-text">asdasdas</p>
-          <button class="list__element-btn" type="button"></button>
-        </li>
       </ul>
     </section>
   </main>
   <footer class="footer">
   </footer>
 </body>
+<script type="module" src="scripts/Note.js"></script>
+<script type="module" src="scripts/index.js"></script>
 
 </html>
